-
Bug
-
Resolution: Done
-
P1: Critical
-
5.12.3
-
Desktop Linux
-
-
89655525ae56dd9662f1873efdce72cbff7bb932 (qt/qtbase/5.12)
Please run the attached example and press the test button which starts the network connection.
Callstack of the crash:
1 QMetaObject::activate qobject.cpp 3658 0x7ffff6cee5a4 2 QMetaObject::activate qobject.cpp 3648 0x7ffff6cef507 3 QHttpNetworkReply::proxyAuthenticationRequired moc_qhttpnetworkreply_p.cpp 409 0x7ffff7328847 4 QHttpNetworkConnectionPrivate::emitProxyAuthenticationRequired qhttpnetworkconnection.cpp 1546 0x7ffff72716a4 5 QHttpNetworkConnectionChannel::_q_proxyAuthenticationRequired qhttpnetworkconnectionchannel.cpp 1125 0x7ffff727722a 6 QHttpNetworkConnectionChannel::qt_static_metacall moc_qhttpnetworkconnectionchannel_p.cpp 130 0x7ffff727a300 7 QMetaObject::activate qobject.cpp 3795 0x7ffff6ceebf9 8 QMetaObject::activate qobject.cpp 3648 0x7ffff6cef507 9 QAbstractSocket::proxyAuthenticationRequired moc_qabstractsocket.cpp 406 0x7ffff72c7157 10 QAbstractSocket::qt_static_metacall moc_qabstractsocket.cpp 258 0x7ffff72cb400 11 QMetaObject::activate qobject.cpp 3795 0x7ffff6ceebf9 12 QMetaObject::activate qobject.cpp 3648 0x7ffff6cef507 13 QAbstractSocket::proxyAuthenticationRequired moc_qabstractsocket.cpp 406 0x7ffff72c7157 14 QHttpSocketEngine::slotSocketReadNotification qhttpsocketengine.cpp 652 0x7ffff72d760b 15 QHttpSocketEngine::qt_static_metacall moc_qhttpsocketengine_p.cpp 110 0x7ffff732d825 16 QMetaObject::activate qobject.cpp 3795 0x7ffff6ceebf9 17 QMetaObject::activate qobject.cpp 3648 0x7ffff6cef507 18 QIODevice::readyRead moc_qiodevice.cpp 189 0x7ffff6c03830 19 QAbstractSocketPrivate::emitReadyRead qabstractsocket.cpp 1307 0x7ffff72c7d73 20 QAbstractSocketPrivate::canReadNotification qabstractsocket.cpp 734 0x7ffff72c7e2c 21 QReadNotifier::event qnativesocketengine.cpp 1274 0x7ffff72da191 22 QApplicationPrivate::notify_helper qapplication.cpp 3736 0x7ffff76e96fc 23 QApplication::notify qapplication.cpp 3483 0x7ffff76f07f0 24 QCoreApplication::notifyInternal2 qcoreapplication.cpp 1060 0x7ffff6cc31d8 25 QCoreApplication::sendEvent qcoreapplication.cpp 1450 0x7ffff6cc338e 26 socketNotifierSourceDispatch qeventdispatcher_glib.cpp 106 0x7ffff6d1b188 27 g_main_context_dispatch 0x7ffff2542197 28 ?? 0x7ffff25423f0 29 g_main_context_iteration 0x7ffff254249c 30 QEventDispatcherGlib::processEvents qeventdispatcher_glib.cpp 424 0x7ffff6d1a56b 31 QEventLoop::exec qeventloop.cpp 225 0x7ffff6cc1b3a 32 QThread::exec qthread.cpp 531 0x7ffff6af48dc 33 QThreadPrivate::start qthread_unix.cpp 361 0x7ffff6af5e13 34 start_thread pthread_create.c 333 0x7ffff56af6ba 35 clone clone.S 109 0x7ffff61f541d
if SpdyAllowedAttribute is not set then it works fine.
When pw and user is set it works fine.
With Apache proxy stack_spdy.txt is when setting QNetworkRequest::SpdyAllowedAttribute to
true and canceling the authentication.
The Assert message is: "ASSERT: "chan->spdyRequestsToSend.count() > 0"
in file access/qhttpnetworkconnection.cpp, line 1536".
For Gerrit Dashboard: QTBUG-76426 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
266264,5 | QHttpNetworkConnection: Change assert to early return and handle Http2 | 5.12 | qt/qtbase | Status: MERGED | +2 | 0 |